--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,40 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    background-color: #333;
-    height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background-color: #0a0a0a;
+  height: 100vh;
 }
 
 .game-area {
-    width: 700px;
-    height: 500px;
-    background-color: white;
-    position: relative;
+  width: 800px;
+  height: 600px;
+  background-color: white;
+  position: relative;
 }
 
 .ball {
-    background-color: green;
-    height: 20px;
-    width: 20px;
-    position: absolute;
-    top: 0;
-    left: 0;
+  background-color: green;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .paddle {
-    width: 20px;
-    height: 100px;
-    top: 100px;
-    position: absolute;
-    background-color: black;
+  width: 20px;
+  height: 120px;
+  top: 100px;
+  position: absolute;
+  background-color: #1f75fe;
 }
 
 .player-paddle {
-    left: 0;
+  left: 0;
 }
 
 .computer-paddle {
-    right: 0;
+  right: 0;
 }
-
